--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -67,7 +67,7 @@ p {
 
 /* Estilização do CSS */
 
-.card-container{
+/* .card-container{
     background-color: #ffffff;
     overflow: hidden;
     width: 250px;
@@ -114,4 +114,4 @@ img{
 .navbar{
     background-color: #668CD9;
 
-}
+} */
