--- a/webapp/views/index.html
+++ b/webapp/views/index.html
@@ -6,11 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/webapp/css/style.css">
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="/node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <link rel="stylesheet" href="../css/style.css"> 
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+
+    <!-- CSS do card -->
+    <link rel="stylesheet" href="../css/estilo.css">
+
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 
 </head>
 
@@ -47,7 +51,7 @@
         <h1 class="titulo">Software, Site e Aplicativos</h1>
         <p class="subtitulo">Você pode contratar nossa equipe para desenvolver software para sua empresa, necessidade de trabalho.</p>
     </main>
-    <div class="container mb-3">
+    <!-- <div class="container mb-3">
         <h2 class="categoria mb-5">Software Prontos</h2>
         <div class="card-container d-flex flex-column justify-content-between align-items-center">
             <img class="card-img" src="/webapp/img/print3.png" alt="">
@@ -61,8 +65,50 @@
                 Adquirir Agora
             </button>
         </div>
-    </div>
+    </div> -->
 
+    <!-- Card -->
+    <div class="container_card">
+        <div class="grupo-card">
+            <div class="card">
+                <div class="imagem">
+                    <img class="img1" src="../img/img1.jpg" alt="">
+                </div>
+                <h2>Título</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a id nobis sunt culpa aut consequuntur.</p>
+                <div class="detalhes"><span class="preco">Preço:</span> <span class="valor">R$ 500</span> </div>
+                <div class="grupo-btn">
+                    <a class="btn cor1" href="">add ao carrinho</a>
+                    <a class="btn cor2" href="">Compra agora</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imagem">
+                    <img class="img1" src="../img/img2.jpg" alt="">
+                </div>
+                <h2>Título</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a id nobis sunt culpa aut consequuntur.</p>
+                <div class="detalhes"><span class="preco">Preço:</span> <span class="valor">R$ 500</span> </div>
+                <div class="grupo-btn">
+                    <a class="btn cor1" href="">add ao carrinho</a>
+                    <a class="btn cor2" href="">Compra agora</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imagem">
+                    <img class="img1" src="../img/img3.jpg" alt="">
+                </div>
+                <h2>Título</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a id nobis sunt culpa aut consequuntur.</p>
+                <div class="detalhes"><span class="preco">Preço:</span> <span class="valor">R$ 500</span> </div>
+                <div class="grupo-btn">
+                    <a class="btn cor1" href="">add ao carrinho</a>
+                    <a class="btn cor2" href="">Compra agora</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
