--- a/webapp/views/index.html
+++ b/webapp/views/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
@@ -30,39 +29,50 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Opção 1</a>
+                            <a class="nav-link" href="#">Produtos Prontos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Opção 2</a>
+                            <a class="nav-link" href="#">Produtos Personalizados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Opção 3</a>
+                            <a class="nav-link" href="#">Funcionário</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+    
     <main>
-        <h1 class="titulo">Software, Site e Aplicativos</h1>
-        <p class="subtitulo">Você pode contratar nossa equipe para desenvolver software para sua empresa, necessidade de trabalho.</p>
-    </main>
-    <div class="container mb-3">
-        <h2 class="categoria mb-5">Software Prontos</h2>
-        <div class="card-container d-flex flex-column justify-content-between align-items-center">
-            <img class="card-img" src="/webapp/img/print3.png" alt="">
-            <div class="card-title">
-                Software de Administração com Java
-            </div>
-            <div class="card-description">
-                Software desenvolvido com Java para otimizar e facilitar o processo de administração do seu site, inclui ferramentas especializadas para isso.
-            </div>
-            <button class="card-btn d-flex justify-content-center align-items-center">
-                Adquirir Agora
-            </button>
-        </div>
-    </div>
+        <section class="principal">
+            <h1 class="titulo">Software, Site e Aplicativos</h1>
+            <p class="subtitulo">Você pode contratar nossa equipe para desenvolver software para sua empresa, necessidade de trabalho.</p>
+        </section>
+        
+        <section class="produtos-prontos">
+            
+            <h2 class="categoria mb-5">Software Prontos</h2>
+            
+            <!-- Código do Card -->
+            
+        </section>
+        
+        <section class="produtos-personalizado">
+            
+            <h2 class="categoria mb-5">Software Prontos</h2>
 
+        </section>
+        
+        <section class="funcionario">
+            
+            <h2 class="categoria mb-5">Software Prontos</h2>
+
+        </section>
+    </main>
+    
+    <footer>
+
+    </footer>
 </body>
 
 </html>
