--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -23,23 +23,6 @@ body{
   
 }
 
-main {
-    background-color: #668CD9;
-    padding: 20px;
-    text-align: center;
-    width: 100%;
-    height: calc(100vh - 300px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.navbar{
-    background-color: #668CD9;
-
-} 
-
 h1, h2, h3 {
     font-weight: 700;
 }
@@ -73,7 +56,24 @@ p {
     margin-top: 30px;
 }
 
+main section.principal{
+    background-color: #668CD9;
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+    height: calc(100vh - 300px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar{
+    background-color: #668CD9;
+} 
+
 /* Estilização do CSS */
+
 .container_card {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     width: 100%;
