--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -56,6 +56,11 @@ p {
     margin-top: 30px;
 }
 
+section.produtos-prontos, .produtos-personalizado,
+        .funcionario{
+    margin: 32px
+}
+
 main section.principal{
     background-color: #668CD9;
     padding: 20px;
@@ -68,8 +73,10 @@ main section.principal{
     justify-content: center;
 }
 
-.navbar{
+nav{
     background-color: #668CD9;
+    display: flex;
+    justify-content: space-between;
 } 
 
 /* Estilização do CSS */
@@ -92,7 +99,8 @@ main section.principal{
     height: 540px;
     margin-bottom: 30px;
     border-radius: 5px;
-    box-shadow: 0px 0px 15px 6px #00000099;
+    box-shadow: 0px 0px 8px 3px #00000099;
+    transition: all 0.4s;
 }
 
 .card .imagem {
@@ -145,30 +153,24 @@ main section.principal{
     font-weight: 600;
 }
 
-.card .grupo-btn {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 0 auto;
-}
-
-.card .grupo-btn .btn {
+.card .btn {
     font-size: 0.8em;
     text-decoration: none;
     font-weight: 700;
     text-transform: uppercase;
     padding: 15px 22px;
-    border-radius: 8px;
+    border-radius: 0px 0px 5px 5px;
     box-shadow: 1px 1px 2px 1px #868686;
-    transition: all 0.4s;
+
 }
 
-.card .grupo-btn .btn:hover {
+.card:hover {
 
     transform: scale(1.09);
     box-shadow: none;
 }
 
-.card .grupo-btn a.cor1  {
+.card a.cor1  {
     background-color: black;
     color: white;
  
