--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -94,19 +94,19 @@ nav{
 }
 
 .card {
-    background: #f4f4f4;
-    width: 380px;
-    height: 540px;
+    background: #f4f4f4 !important;
+    width: 280px;
+    height: 397.39px;
     margin-bottom: 30px;
     border-radius: 5px;
     border: none !important;
-    box-shadow: 0px 0px 8px 3px #00000099;
+    box-shadow: 0px 0px 8px 3px #00000057;
     transition: all 0.4s;
 }
 
 .card .imagem {
     width: 100%;
-    height: 240px;
+    height: 150px;
 }
 
 .card .imagem img {
@@ -116,41 +116,45 @@ nav{
 
 
 .card h2 {
-    font-size: 1.5em;
-    margin: 20px 0 20px 10px;
+    font-size: 1.1em;
+    margin: 10px 0 10px 10px;
     text-transform: uppercase;
 }
 
 .card p {
-    font-size: 0.85em;
-    margin: 0 10px 20px 10px;
+    font-size: 0.75em;
+    margin: 0 10px 10px 10px;
     text-align: justify;
 }
 
 .card .detalhes {
     text-align: center;
-    margin: 25px 0 40px 0;
+    margin-bottom: 15px;
 }
 
 .card .detalhes span.preco {
-    font-size: 1.15em;
+    font-size: 0.9em;
+    color: #2f3a59;
     font-style: italic;
-    letter-spacing: 1.5px;
+    font-weight: 600;
+    letter-spacing: 1.2px;
     position: relative;
 }
 
 .card .detalhes span.preco::after {
     content: ' ';
-    width: 65px;
-    height: 2px;
+    width: 50px;
+    height: 1px;
     background-color: #2f3a59;
     position: absolute;
     top: 1.35em;
-    left: -3px;
+    left: -1px;
+    box-shadow: 0px 2px 8px 1px #2f3a59;
 }
 
 .card .detalhes span.valor {
-    color: #010326;
+    font-size: 0.9em;
+    color: #2651a6;
     font-weight: 600;
 }
 
@@ -172,15 +176,8 @@ nav{
 }
 
 .card a.cor1  {
-    background-color: black;
+    background-color: #2651a6;
     color: white;
- 
-}
-
-.card .grupo-btn a.cor2  {
-    background: rgb(241, 241, 241);
-    color: #000;
-    border: 1px solid #000;
 }
 
 
@@ -192,6 +189,6 @@ nav{
         flex-direction: row;
         flex-wrap: wrap;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-around;
     }
 }
