--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -44,6 +44,10 @@ p {
     line-height: 1.5;
 }
 
+a.navbar-brand{
+    color: white !important;
+}
+
 .titulo{
     color: white;
 }
@@ -56,12 +60,12 @@ p {
     margin-top: 30px;
 }
 
-section.produtos-prontos, .produtos-personalizado,
-        .funcionario{
+section#produtos-prontos, #produtos-personalizado,
+        #funcionario, #contato{
     margin: 32px
 }
 
-main section.principal{
+main section#principal{
     background-color: #668CD9;
     padding: 20px;
     text-align: center;
@@ -80,15 +84,44 @@ nav{
 } 
 
 .nav-link {
-    color: #000 !important;
-    transition: all 0.5s !important;
+    color: white !important;
 }
 
-.nav-link:hover {
-    transform: rotate(360deg) !important;
-}
 
-/* Estilização do CSS */
+/* Código do Botão */
+
+.round-button {
+    margin-top: 2px;
+    background: #333333;
+    color: white;
+    border-radius: 50px;
+    padding: 5px 15px;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .round-button:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #1E1E1E;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in-out;
+    z-index: -1;
+  }
+  
+  .round-button:hover:before {
+    transform: translateX(0);
+  }
+
+/* Estilização do CARD - CSS */
 
 .container_card {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
