--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -147,13 +147,18 @@ nav{
 
 .card {
     background: #f4f4f4 !important;
-    width: 280px;
-    height: 397.39px;
+    width: 230px;
+    height: 290px;
     margin-bottom: 30px;
     border-radius: 5px;
     border: none !important;
-    box-shadow: 0px 0px 8px 3px #afafafc4;
+    box-shadow: 0px 0px 4px 2px #afafafc4;
     transition: all 0.4s;
+}
+
+.card-header{
+    display: flex;
+    justify-content: center;
 }
 
 .card .imagem {
@@ -192,17 +197,6 @@ nav{
     position: relative;
 }
 
-/* .card .detalhes span.preco::after {
-    content: ' ';
-    width: 50px;
-    height: 1px;
-    background-color: #2f3a59;
-    position: absolute;
-    top: 1.35em;
-    left: -1px;
-    box-shadow: 0px 2px 8px 1px #2f3a59;
-} */
-
 .card .detalhes span.valor {
     font-size: 0.9em;
     color: #2651a6;
@@ -214,14 +208,11 @@ nav{
     text-decoration: none;
     font-weight: 700;
     text-transform: uppercase;
-    padding: 15px 22px;
+    padding: 10px 15px;
     border-radius: 0px 0px 5px 5px;
-    box-shadow: 1px 1px 2px 1px #868686;
-
 }
 
 .card:hover {
-
     transform: scale(1.09);
     box-shadow: none;
 }
