--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -151,20 +151,32 @@ nav{
     width: 220px;
     height: 200px;
     margin-bottom: 30px;
-    border-radius: 5px;
+    border-radius: 0 !important;
     border: none !important;
     box-shadow: 0px 0px 4px 2px #afafafc4;
     transition: all 0.4s;
 }
 
+.card .conteudo {
+    padding: 10px;
+}
+
 .card-header{
-    display: flex;
-    justify-content: center;
+    text-align: left;
+    border: 0 !important;
+    background: white !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.card-header >h2 {
+    font-size: 0.9em;
+    font-weight: 600 !important;
 }
 
 .card .imagem {
     width: 100%;
-    height: 150px;
+    height: 130px;
 }
 
 .card .imagem img {
@@ -173,55 +185,35 @@ nav{
 }
 
 
-.card h2 {
-    font-size: 1em;
-    margin: 0;
-    text-transform: uppercase;
-}
-
-.card p {
-    font-size: 0.70em;
-    margin: 0 10px 10px 10px;
+.card .conteudo p {
+    color: #000;
+    font-size: 0.60em;
+    font-weight: 600;
     text-align: justify;
+    margin-bottom: 5px;
 }
 
 .card .detalhes {
-    text-align: center;
+    text-align: left;
+    margin-bottom: 0;
 }
 
 .card .detalhes span.preco {
-    font-size: 0.9em;
+    font-size: 0.8em;
     color: #2f3a59;
     font-style: italic;
+    letter-spacing: 0.05em;
     font-weight: 600;
-    letter-spacing: 1.2px;
-    position: relative;
 }
 
 .card .detalhes span.valor {
-    font-size: 0.9em;
+    font-size: 0.75em;
     color: #2651a6;
     font-weight: 600;
 }
 
-.card .btn {
-    font-size: 0.8em;
-    text-decoration: none;
-    font-weight: 700;
-    text-transform: uppercase;
-    padding: 10px 15px;
-    border-radius: 0px 0px 5px 5px;
-}
 
-.card:hover {
-    transform: scale(1.09);
-    box-shadow: none;
-}
 
-.card a.cor1  {
-    background-color: #2651a6;
-    color: white;
-}
 
 footer{
     background-color: #0D0D0D;
