--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -164,7 +164,7 @@ nav{
 .card-header{
     text-align: left;
     border: 0 !important;
-    background: white !important;
+    background: none !important;
     margin: 0 !important;
     padding: 0 !important;
 }
