--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -134,6 +134,15 @@ nav{
 
 /* Estilização do CARD - CSS */
 
+.arrow {
+    border: 0;
+    background: #2651a6;
+    padding: 5px 10px;
+    color: white;
+}
+
+
+
 .container_card {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     width: 100%;
@@ -141,21 +150,38 @@ nav{
 
 .grupo-card {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 40px;
+    flex-wrap: nowrap;
+    gap: 15px;
+    overflow-x: auto;
+    
 }
+
+ /* This is from w3schools */
+  /* 
+  https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .grupo-card::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .grupo-card {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 
 .card {
     background: #f4f4f4 !important;
     width: 220px;
     height: 200px;
-    margin-bottom: 30px;
+    flex-shrink: 0;
     border-radius: 0 !important;
     border: none !important;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     transition: all 0.4s;
 }
+
+
 
 .card .conteudo {
     padding: 10px;
@@ -188,7 +214,7 @@ nav{
 .card .conteudo p {
     color: #000;
     font-size: 0.60em;
-    font-weight: 600;
+    font-weight: 400;
     text-align: justify;
     margin-bottom: 5px;
 }
@@ -326,16 +352,6 @@ footer{
 
 
 @media (min-width: 768px) {
-
-
-
-    .grupo-card {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-around;
-    }
 
     .foto-perfil {
         width: 190px;
