--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -48,6 +48,7 @@ a.navbar-brand{
     color: white !important;
 }
 
+
 .titulo{
     color: white;
 }
@@ -152,7 +153,7 @@ nav{
     display: flex;
     flex-wrap: nowrap;
     gap: 15px;
-    overflow-x: auto;
+    /* overflow-x: auto; */
     
 }
 
