--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -86,6 +86,11 @@ section#produtos-personalizado{
     color: white;
 }
 
+.area-text {
+    width: 400px;
+}
+
+
 section#contato{
     background-color: #668CD9;
     color: white;
@@ -176,10 +181,23 @@ background-color: #3e8e41;
     display: flex;
     flex-wrap: nowrap;
     gap: 15px;
-    /* overflow-x: auto; */
-    
+    overflow-x: 
+    auto; 
 }
 
+  /* This is from w3schools */
+  /* 
+  https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .grupo-card::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .grupo-card {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 
 
 .card {
