--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -64,7 +64,12 @@ a.navbar-brand{
 
 section#produtos-prontos, #produtos-personalizado,
         #funcionario, #contato{
-    padding: 30px
+    padding: 30px;
+}
+
+section#produtos-prontos{
+    padding-top: 50px;
+    padding-bottom: 80px;
 }
 
 main section#principal{
@@ -120,7 +125,7 @@ nav{
     border-radius: 4px;
     transition-duration: 0.4s;
     cursor: pointer;
-    margin: 10px;
+    margin-top: 10px;
 }
   
 .personalizar-btn:hover {
