--- a/homepage-vue/src/assets/style.css
+++ b/homepage-vue/src/assets/style.css
@@ -69,12 +69,12 @@ a {
     margin-bottom: 1rem;
 }
 
-#img-logo {
+.img-logo {
     width: 50px;
     height: 50px;
     background: url(/public/img/full-screen.png) no-repeat;
-    background-size: cover;
-    background-position: center center;
+    background-size: cover !important;
+    background-position: center center !important;
 }
 
 .nav-link{
@@ -219,6 +219,45 @@ a {
     margin-bottom: 1.8rem;
 }
 
+/* footer */
+
+#section-footer {
+    padding: 3rem 2rem;
+}
+
+
+.logo-footer .img-logo {
+    background: url(/public/img/fullscreen.png);
+}
+
+.linha-footer {
+    position: relative;
+    width: 100%;
+    height: 2px;
+}
+
+.linha-footer::after{
+    position: absolute;
+    content: '';
+    background-color: var(--color-2);
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    top: -3.5px;
+    left: 0px;
+}
+
+.linha-footer::before{
+    position: absolute;
+    content: '';
+    background-color: var(--color-2);
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    top: -3.5px;
+    right: 0px;
+}
+
 /* media queries */
 
 @media (min-width: 576px) {
@@ -267,7 +306,7 @@ a {
         padding: 1rem;
     }
 
-    #img-logo {
+    .img-logo {
         width: 60px;
         height: 60px;
     }
@@ -327,7 +366,62 @@ a {
     .project h3 {
         font-size: 1.25rem;
     }
+
+    /* footer */
+
+    #section-footer {
+        padding: 6rem 2rem;
+    }
+
+    .logo-footer .img-logo {
+       width: 80px;
+       height: 80px;
+    }
+
+    .logo-footer .logo-text {
+        font-size: 2rem;
+    }
     
+    .redes-sociais {
+        font-size: 1.5rem;
+    }
+
+    .linha-footer {
+        width: 2px !important;
+        height: auto;
+        padding-left:  0;
+        padding-right: 0;
+    }
+
+    .linha-footer::after{
+        position: absolute;
+        content: '';
+        background-color: var(--color-2);
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        top: -3.5px;
+        left: -3.5px;
+    }
+    
+    .linha-footer::before{
+        position: absolute;
+        content: '';
+        background-color: var(--color-2);
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        top: 100%;
+        right: -4px;
+    }
+    
+    .title-footer {
+        font-size: 1.45rem;
+    }
+    
+    .text-footer {
+        font-size: 1.25rem;
+    }
 }
 
 @media (min-width: 992px) { 
@@ -361,6 +455,37 @@ a {
     .text-project {
         font-size: 2.5rem;
     }
+
+    /* footer */
+
+    #section-footer {
+        padding: 12rem 6rem;
+    }
+
+    .logo-footer {
+        margin-bottom: 4rem;
+    }
+
+    .logo-footer .img-logo {
+        width: 100px;
+        height: 100px;
+     }
+ 
+     .logo-footer .logo-text {
+         font-size: 3rem;
+     }
+     
+     .redes-sociais {
+         font-size: 2rem;
+     }
+      
+    .title-footer {
+        font-size: 1.65rem;
+    }
+    
+    .text-footer {
+        font-size: 1.45rem;
+    }
 }
 
 @media (min-width: 1400px) { 
@@ -372,7 +497,7 @@ a {
         padding: 1rem 2rem;
     }
 
-    #img-logo {
+    .img-logo {
         width: 100px;
         height: 100px;
     }
