--- a/homepage-vue/src/assets/style.css
+++ b/homepage-vue/src/assets/style.css
@@ -1,19 +1,20 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url(responsive.css);
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 :root{
     --font-primary: 'Poppins', sans-serif;
     --font-secondary: 'Open Sans', sans-serif;
-    --color-1: #000000;
-    --color-2: #fff;
-    --color-purple: #4c1eb8;
+    --black: #000000;
+    --white: #fff;
+    --purple: #4c1eb8;
     --gray:  #DFDBDB;
-    --color-3: #FA0644;
-    --color-4: #363636;
-    --cor-whatsapp: #25D366;
+    --red: #FA0644;
+    --dark-gray: #363636;
+    --green-whatsapp: #25D366;
 }
 
 /* Geral */
@@ -30,29 +31,17 @@
     margin: 0;
     font-family: var(--font-primary);
 }
-body{
-    background-color: black !important;
-  }
 
 .bg-black {
-    background-color: var(--color-1);
+    background-color: var(--black);
 }
 
 .bg-purple {
-    background-color: var(--color-purple);
+    background-color: var(--purple);
 }
 
 .text-purple {
-    color: var(--color-purple);
-}
-
-ul {
-    list-style: none;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
+    color: var(--purple);
 }
 
 .font-primary {
@@ -63,540 +52,3 @@ a {
     font-family: var(--font-secondary);
 }
 
-/* específicos */
-
-
-/* home */
-
-
-.header {
-    padding: 1rem;
-    height: min-content;
-    margin-bottom: 1rem;
-}
-
-.img-logo {
-    width: 50px;
-    height: 50px;
-    background: url(/public/img/full-screen.png) no-repeat;
-    background-size: cover !important;
-    background-position: center center !important;
-}
-
-.icon-menu {
-    font-size: 3rem;
-}
-
-.nav-link{
-    position: relative;
-    margin-left: 2rem;
-}
-
-.nav-link::before{
-    content: '';
-    position: absolute;
-    background-color: white;
-    width: 100%;
-    height: 2px;
-    top: 100%;
-    left: 0;
-}
-
-.content-home {
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0 2rem;
-}
-
-.btn-home {
-    margin-top: 3rem;
-}
-
-.title-home {
-    font-size: 1.5rem;
-}
-
-.caption-home {
-    font-size: 1rem;
-}
-
-.btn {
-    padding: 0.8rem 1.2rem;
-}
-
-
-/* about */
-
-#img-about {
-    background: url(/public/img/sobre.jpg) no-repeat;
-    background-size: cover;
-    background-position: center center;
-}
-
-.content-about {
-    padding: 2rem;
-}
-
-.title-about {
-    font-size: 2rem;
-    font-weight: 300;
-    margin-bottom: 1rem;
-}
-
-.text-about {
-    font-size: 0.95rem;
-    font-family: var(--font-secondary);
-    text-align: left;
-}
-
-/* serviços */
-
-#section-service {
-    padding: 1rem 2rem;
-}
-
-.service {
-    padding: 1.5rem 0;
-}
-
-.bg-icon {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    box-shadow: 0px 0px 20px 20px #3f3f3f;
-    ;
-}
-
-#icon-service-1 {
-    background: url(/public/img/inteligencia-artificial.png) no-repeat;
-}
-
-#icon-service-2 {
-    background: url(/public/img/medalha.png) no-repeat;
-}
-
-#icon-service-3 {
-    background: url(/public/img/trofeu.png) no-repeat;
-}
-
-.icon-service {
-    background-size: 100% 100% !important;
-    background-position: center center !important;
-    width: 80px;
-    height: 80px;
-}
-
-/* projects */
-
-#section-project {
-    padding: 3rem 2rem;
-}
-
-.content-project {
-    margin-bottom: 2rem;
-}
-
-.title-project {
-    font-size: 2rem;
-}
-
-.text-project {
-    font-size: 1rem;
-}
-
-.gruop-projects {
-    max-width: 1200px;
-    margin: auto;
-}
-
-.project {
-    max-width: 370px;
-    margin-bottom: 2rem;
-}
-
-#img-project-1 {
-    background: url('/public/img/servico-1.jpg') no-repeat;
-}
-
-#img-project-2 {
-    background: url('/public/img/servico-2.jpg') no-repeat;
-}
-
-#img-project-3 {
-    background: url('/public/img/pexels-photomix-company-230544.jpg') no-repeat;
-}
-
-.bg-img-project {
-    width: 100%;
-    height: 200px;
-    background-size: cover !important;
-    background-position: center center !important;
-    border: 2px solid var(--color-purple);
-    margin-bottom: 1.8rem;
-}
-
-/* footer */
-
-#section-footer {
-    padding: 3rem 2rem;
-}
-
-
-.logo-footer .img-logo {
-    background: url(/public/img/fullscreen.png);
-}
-
-.linha-footer {
-    position: relative;
-    width: 100%;
-    height: 2px;
-}
-
-.linha-footer::after{
-    position: absolute;
-    content: '';
-    background-color: var(--color-2);
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    top: -3.5px;
-    left: 0px;
-}
-
-.linha-footer::before{
-    position: absolute;
-    content: '';
-    background-color: var(--color-2);
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    top: -3.5px;
-    right: 0px;
-}
-
-/* media queries */
-
-@media (min-width: 576px) {
-
-    /* home */
-    
-    .title-home {
-        font-size: 2rem;
-    }
-    
-    .caption-home {
-        font-size: 1.25rem;
-    }
-  
-
-    /* about */
-
-    #section-about {
-        margin-bottom: 3rem;
-    }
-
-    .content-about {
-        padding: 3rem;
-    }
-    
-    .title-about {
-        font-size: 3rem;
-        margin-bottom: 2rem;
-    }
-    
-    .text-about {
-        font-size: 1.25rem;
-    }
-
-    /* serviços */
-
-    .service {
-        padding: 1.5rem;
-    }
-
-    .service h3 {
-        font-size: 1.5rem;
-    }
-
-    .service p {
-        font-size: 1rem;
-    }
-}
-
-@media (min-width: 768px) { 
-
-    /* home */
-
-    .header {
-        padding: 1rem;
-    }
-
-    .img-logo {
-        width: 60px;
-        height: 60px;
-    }
-
-    .nav-link{
-        font-size: 0.65rem;
-    }
-
-    .title-home {
-        font-size: 2.5rem;
-    }
-
-    .caption-home {
-        font-size: 1.5rem;
-    }
-
-
-    /* About */
-
-    .content-about {
-        padding: 4.5rem;
-    }
-    
-    .title-about {
-        font-size: 3rem;
-        margin-bottom: 2rem;
-    }
-    
-    .text-about {
-        font-size: 1.25rem;
-    }
-
-    /* serviços */
-
-    #section-service {
-        padding: 6rem 0;
-    }
-
-    /* projects */  
-
-    .title-project {
-        font-size: 3.5rem;
-    }
-    
-    .text-project {
-        font-size: 1.5rem;
-    }
-
-    .project h3 {
-        font-size: 1.25rem;
-    }
-
-    /* footer */
-
-    #section-footer {
-        padding: 6rem 2rem;
-    }
-
-    .logo-footer .img-logo {
-       width: 80px;
-       height: 80px;
-    }
-
-    .logo-footer .logo-text {
-        font-size: 2rem;
-    }
-    
-    .redes-sociais {
-        font-size: 1.5rem;
-    }
-
-    .linha-footer {
-        width: 2px !important;
-        height: auto;
-        padding-left:  0;
-        padding-right: 0;
-    }
-
-    .linha-footer::after{
-        position: absolute;
-        content: '';
-        background-color: var(--color-2);
-        width: 10px;
-        height: 10px;
-        border-radius: 50%;
-        top: -3.5px;
-        left: -3.5px;
-    }
-    
-    .linha-footer::before{
-        position: absolute;
-        content: '';
-        background-color: var(--color-2);
-        width: 10px;
-        height: 10px;
-        border-radius: 50%;
-        top: 100%;
-        right: -4px;
-    }
-    
-    .title-footer {
-        font-size: 1.45rem;
-    }
-    
-    .text-footer {
-        font-size: 1.25rem;
-    }
-}
-
-@media (min-width: 992px) { 
-
-    /* home */
-
-    .nav-link {
-        font-size: 0.75rem;
-    }
-
-    .btn {
-        font-size: 1rem;
-        padding: 0.8rem 1rem;
-    }
-  
-}
-
-@media (min-width: 1200px) { 
-    
-    /* projects */
-    #section-project {
-        padding: 8rem 3rem;
-    }
-
-    .content-project {
-        margin-bottom: 5.5rem;
-    }
-
-    .title-project {
-        font-size: 4.5rem;
-    }
-    
-    .text-project {
-        font-size: 2.5rem;
-    }
-
-    /* footer */
-
-    #section-footer {
-        padding: 12rem 6rem;
-    }
-
-    .logo-footer {
-        margin-bottom: 4rem;
-    }
-
-    .logo-footer .img-logo {
-        width: 100px;
-        height: 100px;
-     }
- 
-     .logo-footer .logo-text {
-         font-size: 3rem;
-     }
-     
-     .redes-sociais {
-         font-size: 2rem;
-     }
-      
-    .title-footer {
-        font-size: 1.65rem;
-    }
-    
-    .text-footer {
-        font-size: 1.45rem;
-    }
-}
-
-@media (min-width: 1400px) { 
-
-    /* Home */
-
-    
-    .header {
-        padding: 1rem 2rem;
-    }
-
-    .img-logo {
-        width: 100px;
-        height: 100px;
-    }
-
-    .logo-text {
-        font-size: 2rem;
-    }
-
-    .nav-link {
-        font-size: 1rem;
-    }
-
-    .title-home {
-        font-size: 4rem;
-    }
-
-    .caption-home {
-        font-size: 2.5rem;
-    }
-
-    .btn {
-        padding: 0.8rem 1.2rem;
-    }
-
-    /* about */
-
-    .content-about {
-        padding: 8rem 12rem;
-    }
-    
-    .title-about {
-        font-size: 4rem;
-        margin-bottom: 2.5rem;
-    }
-    
-    .text-about {
-        font-size: 1.75rem;
-    }
-
-    /* serviços */
-
-    #section-service {
-        padding: 8rem 0;
-    }
-
-    .title-service {
-        font-size: 3.5rem;
-    }
-    
-    .text-service {
-        font-size: 1.85rem;
-    }
-
-    .bg-icon {
-        width: 180px;
-        height: 180px;
-        border-radius: 50%;
-    }
-
-    .icon-service {
-        background-size: 100% 100% !important;
-        background-position: center center !important;
-        width: 120px;
-        height: 120px;
-    }
-
-    .service h3 {
-        font-size: 2rem;
-    }
-
-    .service p {
-        font-size: 1.25rem;
-    }
-
-   
-}
-
-@media (min-width: 1400px) and (min-height: 900px){
- 
-}
