--- a/homepage-vue/src/assets/responsive.css
+++ b/homepage-vue/src/assets/responsive.css
@@ -1,4 +1,4 @@
-/* Celulares (Portrait) - abaixo de 480 pixels de largura */
+/* Celulares (Portrait) - abaixo de 480 pixels de largura (8)*/
 @media (max-width: 479px) {
   /* Estilos específicos para celulares em portrait */
   /* home */
