--- a/homepage-vue/src/assets/style.css
+++ b/homepage-vue/src/assets/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 @import url(responsive.css);
+@import url(main.css);
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
@@ -20,7 +21,7 @@
 /* Geral */
 
 /* Isso foi feito para retirar um bug onde ocorria scroll na horizontal*/
-.row {
+#footer {
     margin-left: 0;
     margin-right: 0;
 }
