--- a/homepage-vue/src/assets/style.css
+++ b/homepage-vue/src/assets/style.css
@@ -11,7 +11,7 @@
     --font-secondary: 'Open Sans', sans-serif;
     --black: #000000;
     --white: #fff;
-    --purple: #4c1eb8;
+    --purple: #6B66DC;
     --gray:  #DFDBDB;
     --red: #FA0644;
     --dark-gray: #363636;
