--- a/homepage-vue/src/assets/responsive.css
+++ b/homepage-vue/src/assets/responsive.css
@@ -4,12 +4,13 @@
 
   /* home */
 
+  
   .title-home {
-    font-size: 2rem;
+    font-size: var(--fs-title);
   }
 
   .caption-home {
-    font-size: 1.25rem;
+    font-size: var(--fs-caption);
   }
 
   /* about */
@@ -23,26 +24,48 @@
   }
 
   .title-about {
-    font-size: 3rem;
+    font-size: var(--fs-title);
     margin-bottom: 2rem;
   }
 
   .text-about {
-    font-size: 1.25rem;
+    font-size: var(--fs-text);
   }
 
   /* serviços */
 
-  .service {
-    padding: 1.5rem;
+  .title-service {
+    font-size: var(--fs-title);
+  }
+
+  .caption-service {
+    font-size: var(--fs-caption);
   }
 
   .service h3 {
-    font-size: 1.5rem;
+    font-size: var(--fs-title);
   }
 
   .service p {
-    font-size: 1rem;
+    font-size: var(--fs-text);
+  }
+
+  /* projects */
+
+  .title-project {
+    font-size: var(--fs-title);
+  }
+
+  .caption-project {
+    font-size: var(--fs-caption);
+  }
+
+  .project h3 {
+    font-size: calc(var(--fs-title) * 0.65);
+  }
+
+  .project p {
+    font-size: var(--fs-text);
   }
 
 }
@@ -54,6 +77,14 @@
 @media (min-width: 480px) and (max-width: 767px) {
   /* Estilos específicos para celulares em landscape */
   /* home */
+
+  .title-home {
+    font-size: var(--fs-sm-title);
+  }
+
+  .caption-home {
+    font-size: var(--fs-sm-caption);
+  }
 
   .header {
     padding: 1rem;
@@ -68,13 +99,7 @@
     font-size: 0.65rem;
   }
 
-  .title-home {
-    font-size: 2.5rem;
-  }
 
-  .caption-home {
-    font-size: 1.5rem;
-  }
 
   /* About */
 
@@ -82,14 +107,16 @@
     padding: 4.5rem;
   }
 
+  
   .title-about {
-    font-size: 3rem;
+    font-size: var(--fs-sm-title);
     margin-bottom: 2rem;
   }
 
   .text-about {
-    font-size: 1.25rem;
+    font-size: var(--fs-sm-text);
   }
+
 
   /* serviços */
 
@@ -97,18 +124,38 @@
     padding: 6rem 0;
   }
 
+  .title-service {
+    font-size: var(--fs-sm-title);
+  }
+
+  .caption-service {
+    font-size: var(--fs-sm-caption);
+  }
+
+  .service h3 {
+    font-size: var(--fs-sm-title);
+  }
+
+  .service p {
+    font-size: var(--fs-sm-text);
+  }
+
   /* projects */
 
   .title-project {
-    font-size: 3.5rem;
+    font-size: var(--fs-sm-title);
   }
 
-  .text-project {
-    font-size: 1.5rem;
+  .caption-project {
+    font-size: var(--fs-sm-caption);
   }
 
   .project h3 {
-    font-size: 1.25rem;
+    font-size: calc(var(--fs-title) * 0.8);
+  }
+
+  .project p {
+    font-size: var(--fs-sm-text);
   }
 
   /* footer */
@@ -144,6 +191,14 @@
   /* Estilos específicos para tablets */
 
   /* home */
+  
+  .title-home {
+    font-size: var(--fs-md-title);
+  }
+
+  .caption-home {
+    font-size: var(--fs-md-caption);
+  }
 
   .nav-link {
     font-size: 0.75rem;
@@ -153,17 +208,216 @@
     font-size: 1rem;
     padding: 0.8rem 1rem;
   }
+
+  /* about */
+
+  .content-about {
+    padding-top: 0 !important;
+  }
+
+   
+  .title-about {
+    font-size: var(--fs-md-title);
+    margin-bottom: 2rem;
+  }
+
+  .text-about {
+    font-size: var(--fs-md-text);
+  }
+
+  /* serviços */
+
+  
+  .title-service {
+    font-size: var(--fs-md-title);
+  }
+
+  .caption-service {
+    font-size: var(--fs-md-caption);
+  }
+
+  .service h3 {
+    font-size: var(--fs-sm-title);
+  }
+
+  .service p {
+    font-size: var(--fs-sm-text);
+  }
+
+  
+  /* projects */
+
+  .title-project {
+    font-size: var(--fs-md-title);
+  }
+
+  .caption-project {
+    font-size: var(--fs-md-caption);
+  }
+
+  .project h3 {
+    font-size: calc(var(--fs-title) * 0.8);
+  }
+
+  .project p {
+    font-size: var(--fs-sm-text);
+  }
+
+  /* Footer */
+
+  .logo-footer {
+    margin-bottom: 1rem;
+  }
+
+  .logo-footer .logo-text {
+    font-size: var(--fs-md-text);
+  }
+
+  .title-footer {
+    font-size: var(--fs-md-text);
+  }
+
+  .text-footer {
+    font-size: var(--fs-sm-text);
+  }
+
 }
 
 /* Desktops Pequenos - entre 1024 e 1199 pixels de largura */
 @media (min-width: 1024px) and (max-width: 1199px) {
   /* Estilos específicos para desktops pequenos */
+
+  /* Home */
+
+  .title-home {
+    font-size: var(--fs-md-title);
+  }
+
+  .caption-home {
+    font-size: var(--fs-md-caption);
+  }
+
+  /* about */
+
+  .content-about {
+    padding-top: 0 !important;
+  }
+
+
+  .title-about {
+    font-size: var(--fs-md-title);
+    margin-bottom: 2rem;
+  }
+
+  .text-about {
+    font-size: var(--fs-md-text);
+  }
+
+  /* serviços */
+  
+  .title-service {
+    font-size: var(--fs-md-title);
+  }
+
+  .caption-service {
+    font-size: var(--fs-md-caption);
+  }
+
+  .service h3 {
+    font-size: var(--fs-sm-title);
+  }
+
+  .service p {
+    font-size: var(--fs-sm-text);
+  }
+
+   /* projects */
+
+  .title-project {
+    font-size: var(--fs-md-title);
+  }
+
+  .caption-project {
+    font-size: var(--fs-md-caption);
+  }
+
+  .project h3 {
+    font-size: calc(var(--fs-title) * 1);
+  }
+
+  .project p {
+    font-size: var(--fs-md-text);
+  }
+
+  /* Footer */
+  
+  .logo-footer {
+    margin-bottom: 1rem;
+  }
+
+  .logo-footer .logo-text {
+    font-size: var(--fs-lg-text);
+  }
+
+  .title-footer {
+    font-size: var(--fs-md-text);
+  }
+
+  .text-footer {
+    font-size: var(--fs-sm-text);
+  }
+
 }
 
 /* Desktops Médios - entre 1200 e 1439 pixels de largura */
 @media (min-width: 1200px) and (max-width: 1439px) {
     
   /* Estilos específicos para desktops médios */
+
+  /* home */
+
+  .title-home {
+    font-size: var(--fs-lg-title);
+  }
+
+  .caption-home {
+    font-size: var(--fs-lg-caption);
+  }
+
+    /* about */
+
+  .content-about {
+    padding-top: 0 !important;
+  }
+
+
+  .title-about {
+    font-size: var(--fs-lg-title);
+    margin-bottom: 2rem;
+  }
+
+  .text-about {
+    font-size: var(--fs-md-text);
+  }
+
+  /* serviços */
+  
+  .title-service {
+    font-size: var(--fs-lg-title);
+  }
+
+  .caption-service {
+    font-size: var(--fs-lg-caption);
+  }
+
+  .service h3 {
+    font-size: var(--fs-sm-title);
+  }
+
+  .service p {
+    font-size: var(--fs-sm-text);
+  }
+
 
   /* projects */
   #project {
@@ -174,12 +428,21 @@
     margin-bottom: 5.5rem;
   }
 
+
   .title-project {
-    font-size: 4.5rem;
+    font-size: var(--fs-lg-title);
   }
 
-  .text-project {
-    font-size: 2.5rem;
+  .caption-project {
+    font-size: var(--fs-lg-caption);
+  }
+
+  .project h3 {
+    font-size: calc( var(--fs-sm-title) * 0.8);
+  }
+
+  .project p {
+    font-size: var(--fs-md-text);
   }
 
   /* footer */
@@ -196,6 +459,23 @@
     font-size: 2rem;
   }
 
+  /* Footer */
+  
+  .logo-footer {
+    margin-bottom: 1rem;
+  }
+
+  .logo-footer .logo-text {
+    font-size: var(--fs-lg-text);
+  }
+
+  .title-footer {
+    font-size: var(--fs-lg-text);
+  }
+
+  .text-footer {
+    font-size: var(--fs-md-text);
+  }
   
 }
 
@@ -203,6 +483,18 @@
 @media (min-width: 1440px) {
   /* Estilos específicos para desktops grandes */
 
+  
+  /* home */
+
+  .title-home {
+    font-size: var(--fs-xl-title);
+  }
+
+  .caption-home {
+    font-size: var(--fs-xl-caption);
+  }
+
+  
   .header {
     padding: 1rem 2rem;
   }
@@ -220,14 +512,6 @@
     font-size: 1rem;
   }
 
-  .title-home {
-    font-size: 4rem;
-  }
-
-  .caption-home {
-    font-size: 2.5rem;
-  }
-
   .btn {
     padding: 0.8rem 1.2rem;
   }
@@ -235,16 +519,17 @@
   /* about */
 
   .content-about {
-    padding: 8rem 12rem;
+    padding-top: 0 !important;
   }
 
+
   .title-about {
-    font-size: 4rem;
+    font-size: var(--fs-xl-title);
     margin-bottom: 2.5rem;
   }
 
   .text-about {
-    font-size: 1.75rem;
+    font-size: var(--fs-xl-text);
   }
 
   /* serviços */
@@ -252,13 +537,22 @@
   #service {
     padding: 8rem 0;
   }
-
+  /* serviços */
+  
   .title-service {
-    font-size: 3.5rem;
+    font-size: var(--fs-xl-title);
   }
 
-  .text-service {
-    font-size: 1.85rem;
+  .caption-service {
+    font-size: var(--fs-xl-caption);
+  }
+
+  .service h3 {
+    font-size: var(--fs-sm-title);
+  }
+
+  .service p {
+    font-size: var(--fs-sm-text);
   }
 
   .bg-icon {
@@ -274,11 +568,40 @@
     height: 120px;
   }
 
-  .service h3 {
-    font-size: 2rem;
+  /* projects */
+
+  .title-project {
+    font-size: var(--fs-xl-title);
   }
 
-  .service p {
-    font-size: 1.25rem;
+  .caption-project {
+    font-size: var(--fs-xl-caption);
   }
+
+  .project h3 {
+    font-size: var(--fs-sm-title);
+  }
+
+  .project p {
+    font-size: var(--fs-md-text);
+  }
+
+  /* Footer */
+
+  .logo-footer {
+    margin-bottom: 2rem;
+  }
+
+  .logo-footer .logo-text {
+    font-size: var(--fs-lg-text);
+  }
+
+  .title-footer {
+    font-size: var(--fs-lg-text);
+  }
+
+  .text-footer {
+    font-size: var(--fs-md-text);
+  }
+
 }
